# docker-palworld-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.idle-pause.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-changelog-config.json
.github/workflows/: build-and-deploy.yml
charts/palworld-server/: Chart.yaml  values.yaml
charts/palworld-server/templates/: _helpers.tpl  deployment.yaml  management-service.yaml  pvc.yaml  service.yaml
config/: DefaultEngine.ini  DefaultPalWorldSettings.ini  default.yaml
docker/: entrypoint.sh
docker/grafana/: dashboard.json  datasource.yml
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/prometheus/: alerts.yml  prometheus.yml
docker/supervisor/: palworld.conf
scripts/: find_previous_release_tag.sh  healthcheck.py  ini_to_yaml_converter.py  palworld_control.py  validate_ci_versions.sh
src/: __init__.py  config_loader.py  container.py  logging_setup.py  server_manager.py
src/backup/: backup_manager.py
src/clients/: rcon_client.py  rest_api_client.py  steamcmd_client.py
src/config/: __init__.py  base.py
src/config/game/: __init__.py  base_camp.py  building.py  difficulty.py  gameplay.py  guild.py  items.py  pal_settings.py
src/config/integration/: __init__.py  discord.py  steamcmd.py
src/config/monitoring/: __init__.py  backup.py  idle_restart.py  monitoring.py
src/config/palworld/: __init__.py  engine.py  main.py  settings.py
src/config/server/: __init__.py  rcon.py  rest_api.py  server.py
src/managers/: __init__.py  api_facade.py  config_manager.py  integration_manager.py  lifecycle_manager.py  process_manager.py  settings_generator.py
src/monitoring/: __init__.py  event_dispatcher.py  idle_restart_manager.py  metrics_collector.py  monitoring_manager.py  player_monitor.py  server_monitor.py  wake_detector.py
src/notifications/: discord_notifier.py
src/protocols/: __init__.py
src/utils/: health_manager.py  helpers.py
tests/: __init__.py  conftest.py  test_api_facade.py  test_autopause_container_wiring.py  test_backup_manager.py  test_ci_version_validation.py  test_color_output.py  test_config.py  test_config_manager.py  test_container.py  test_discord_notifier.py  test_event_dispatcher.py  test_health_manager.py  test_helper_functions.py  test_idle_restart_manager.py  test_lifecycle_manager.py  test_logging_setup.py  test_message_loader.py  test_metrics_collector.py  test_monitoring_manager.py  test_palworld_control.py  test_player_monitor.py  test_process_manager.py  test_protocols.py  test_rcon_client.py  test_release_tag_selection.py  test_rest_api_client.py  test_server_manager.py  test_server_monitor.py  test_settings_generator.py  test_steamcmd_client.py  test_wake_detector.py
